[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/WheelGrouper.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Wheel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Tile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/KineTile.gd" type="Script" id=5]
[ext_resource path="res://Scripts/SlotController.gd" type="Script" id=6]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 90, 0 )

[node name="SlotController" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Polygon2D" parent="."]
color = Color( 0.184314, 0.282353, 0.305882, 1 )
polygon = PoolVector2Array( -78, -33, -60, 177, 249, 165, 241, -59 )

[node name="SlotSpinner" parent="." groups=[
"slotmachine",
] instance=ExtResource( 2 )]
position = Vector2( 0, -17 )
tilesize = 16
tilenum = 10
wheelnum = 3
tilepadding = 2
wheelpadding = 3
winline = 46

[node name="Wheel" type="Node2D" parent="SlotSpinner" groups=[
"wheel",
] instance=ExtResource( 1 )]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
tilenum = 10
speed = 63.0

[node name="Tile" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 1, 0, 1 )
maxdistance = 180
speed = 63
tiletype = 1

[node name="Tile2" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 18 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0, 1, 1, 1 )
maxdistance = 180
speed = 63
tiletype = 7

[node name="Tile3" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 36 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 0.84, 0, 1 )
maxdistance = 180
speed = 63
tiletype = 2

[node name="Tile4" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 54 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0, 1, 1, 1 )
maxdistance = 180
speed = 63
tiletype = 5

[node name="Tile5" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 72 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.87, 0.63, 0.87, 1 )
maxdistance = 180
speed = 63

[node name="Tile6" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 90 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 1, 0, 1 )
maxdistance = 180
speed = 63
tiletype = 0

[node name="Tile7" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 108 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.87, 0.63, 0.87, 1 )
maxdistance = 180
speed = 63
tiletype = 4

[node name="Tile8" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 126 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.87, 0.63, 0.87, 1 )
maxdistance = 180
speed = 63
tiletype = 9

[node name="Tile9" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 144 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0, 1, 1, 1 )
maxdistance = 180
speed = 63
tiletype = 6

[node name="Tile10" type="KinematicBody2D" parent="SlotSpinner/Wheel" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 162 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.56, 0.74, 0.56, 1 )
maxdistance = 180
speed = 63
tiletype = 3

[node name="Wheel2" type="Node2D" parent="SlotSpinner" groups=[
"wheel",
] instance=ExtResource( 1 )]
position = Vector2( 19, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
tilenum = 10
speed = 63.0

[node name="Tile" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0, 1, 1, 1 )
maxdistance = 180
speed = 63
tiletype = 2

[node name="Tile2" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 18 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.96, 0.64, 0.38, 1 )
maxdistance = 180
speed = 63
tiletype = 6

[node name="Tile3" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 36 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.6, 0.8, 0.2, 1 )
maxdistance = 180
speed = 63
tiletype = 3

[node name="Tile4" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 54 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 1, 0, 1 )
maxdistance = 180
speed = 63

[node name="Tile5" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 72 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.53, 0.81, 0.92, 1 )
maxdistance = 180
speed = 63
tiletype = 9

[node name="Tile6" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 90 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.87, 0.63, 0.87, 1 )
maxdistance = 180
speed = 63
tiletype = 5

[node name="Tile7" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 108 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.87, 0.63, 0.87, 1 )
maxdistance = 180
speed = 63
tiletype = 7

[node name="Tile8" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 126 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 0.84, 0, 1 )
maxdistance = 180
speed = 63
tiletype = 4

[node name="Tile9" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 144 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.6, 0.8, 0.2, 1 )
maxdistance = 180
speed = 63
tiletype = 0

[node name="Tile10" type="KinematicBody2D" parent="SlotSpinner/Wheel2" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 162 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 0.84, 0, 1 )
maxdistance = 180
speed = 63
tiletype = 1

[node name="Wheel3" type="Node2D" parent="SlotSpinner" groups=[
"wheel",
] instance=ExtResource( 1 )]
position = Vector2( 38, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
tilenum = 10
speed = 65.0

[node name="Tile" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.56, 0.74, 0.56, 1 )
maxdistance = 180
speed = 65
tiletype = 2

[node name="Tile2" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 18 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 1, 0, 1 )
maxdistance = 180
speed = 65
tiletype = 1

[node name="Tile3" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 36 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.96, 0.64, 0.38, 1 )
maxdistance = 180
speed = 65
tiletype = 9

[node name="Tile4" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 54 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.56, 0.74, 0.56, 1 )
maxdistance = 180
speed = 65
tiletype = 0

[node name="Tile5" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 72 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.6, 0.8, 0.2, 1 )
maxdistance = 180
speed = 65
tiletype = 4

[node name="Tile6" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 90 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.96, 0.64, 0.38, 1 )
maxdistance = 180
speed = 65
tiletype = 6

[node name="Tile7" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 108 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 1, 1, 0, 1 )
maxdistance = 180
speed = 65

[node name="Tile8" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 126 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.6, 0.8, 0.2, 1 )
maxdistance = 180
speed = 65
tiletype = 7

[node name="Tile9" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 144 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0, 1, 1, 1 )
maxdistance = 180
speed = 65
tiletype = 3

[node name="Tile10" type="KinematicBody2D" parent="SlotSpinner/Wheel3" groups=[
"tile",
] instance=ExtResource( 4 )]
position = Vector2( 0, 162 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.443138 ],
"_edit_vertical_guides_": [ 10.0183 ]
}
tilesize = 16
tilecolor = Color( 0.87, 0.63, 0.87, 1 )
maxdistance = 180
speed = 65
tiletype = 5

[node name="Clicker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clicker"]
position = Vector2( 0, 29 )
shape = SubResource( 1 )

[connection signal="wheels_stopped" from="SlotSpinner" to="." method="wheelsAllStopped"]
[connection signal="area_entered" from="Clicker" to="." method="_on_Clicker_area_entered"]
